# auth-service

./: .env  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/api/api_v1/: __init__.py  auth.py  health.py
src/api/depends/: __init__.py  auth.py  session.py  uow.py
src/constants/: __init__.py  device.py
src/core/: config.py  handlers.py  lifespan.py
src/core/database/: __init__.py  base.py  uow.py
src/core/httpx/: __init__.py  base.py  httpx_client.py
src/core/redis/: __init__.py  base.py  redis_client.py
src/core/security/: __init__.py  password.py  security.py  user_agent.py
src/core/security/generators/: __init__.py  otp_code.py
src/core/security/token/: __init__.py  creator.py  hasher.py  subject.py
src/core/taskiq/: __init__.py  taskiq_client.py
src/exceptions/: __init__.py  auth.py  base.py  otp.py
src/migrations/: env.py
src/migrations/versions/: 0001_create_sessions_table.py  0002_create_refresh_tokens_table.py
src/models/: __init__.py  base.py  refresh_token.py  session.py  user.py
src/repositories/: __init__.py  base.py  refresh_token.py  session.py  user.py
src/schemas/: __init__.py  auth.py  otp_code.py  refresh_token.py  session.py  token.py  user.py
src/services/: __init__.py  auth.py
src/tasks/: __init__.py  send_email.py
src/tests/: conftest.py  test_config.py
